Fix overflow css for ie7 in example 7

--- a/examples/example.css
+++ b/examples/example.css
@@ -41,4 +41,7 @@ pre {
 #scroll-container {
     height: 200px;
     overflow-y: scroll;
+    position: relative;  /* ie7 fix */
+    -ms-user-select: none;
+    user-select: none;
 }
